Add internal exception classes and refactor dialect implementations for improved error handling